--- a/Examples/RGB-D/TUM1.yaml
+++ b/Examples/RGB-D/TUM1.yaml
@@ -69,4 +69,4 @@ Viewer.ViewpointZ: -1.8
 Viewer.ViewpointF: 500
 
 Map.loadMapfile: map_9F_pennybot.bin
-# Map.saveMapfile: saveMap.bin
+Map.saveMapfile: saveMap.bin
